trying to solve scrollbar issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,3 +71,35 @@
   --scrim-dark: #000000;
   --shadow-dark: #000000;
 }
+
+@keyframes fade-in-animation {
+  from {
+    opacity: 0;
+    transform: translateX(5%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes image-reveal-animation {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@layer common {
+  .content-fade-in {
+    animation: fade-in-animation linear both;
+    animation-timeline: view();
+    animation-range: cover 25% contain 35%;
+  }
+  .image-reveal {
+    animation: image-reveal-animation 1.3s cubic-bezier(0.65, 0, 0.35, 1)
+      forwards;
+  }
+}
